# DataProtection

./: .gitignore
backend/: pyproject.toml  samconfig.toml  template.yaml
backend/src/: app.py
backend/src/frameworks/: ipec.json  iso_27001_2022.json  nist_csf_2.json  pci_dss_4_0_1.json  rbz_cyber.json  rbz_nps.json  zimbabwe-dpa.json
backend/src/handlers/: api.py
backend/src/models/: types.py
backend/src/services/: assessment_engine.py  data_store.py  framework_registry.py  report_builder.py
backend/tests/: test_api.py  test_app.py  test_assessment_engine.py  test_data_store_dynamodb_writes.py  test_data_store_framework_fallback.py  test_data_store_report_handling.py  test_framework_registry.py  test_report_builder_pdf.py  test_template_routes.py  test_types.py
docs/: architecture.md  deployment.md
frameworks/: ipec.json  iso_27001_2022.json  nist_csf_2.json  pci_dss_4_0_1.json  rbz_cyber.json  rbz_nps.json  zimbabwe-dpa.json
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.test.jsx  App.tsx  main.jsx  main.tsx  styles.css  vite-env.d.ts
frontend/src/components/: PageHeader.jsx  ScoreCard.jsx  WizardStepCard.jsx
frontend/src/data/: sampleData.js
frontend/src/layouts/: AppLayout.jsx
frontend/src/lib/: api.ts  auth.ts
frontend/src/pages/: AssessmentWizardPage.jsx  DashboardPage.jsx  FindingsPage.jsx  OrganizationSetupPage.jsx  ReportSummaryPage.jsx  SignInPage.jsx
