[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dataprotection-backend"
version = "0.1.0"
description = "AWS Lambda backend for the DataProtection SaaS MVP"
requires-python = ">=3.9"
dependencies = ["boto3>=1.35.0", "reportlab>=4.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
